{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 707,
  "lineage": "e3127a11-a193-e73c-6696-d9d4e5740b1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eda3d0a775c16e88",
            "association_id": "eipassoc-07e5e06047a8d9ea0",
            "domain": "vpc",
            "id": "eipalloc-0eda3d0a775c16e88",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0ba3748e310b05570",
            "private_dns": "ip-10-0-14-244.eu-west-1.compute.internal",
            "private_ip": "10.0.14.244",
            "public_dns": "ec2-54-228-42-30.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.42.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "apache-elb"
            },
            "tags_all": {
              "Name": "apache-elb"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:internet-gateway/igw-092ac93d5988e2444",
            "id": "igw-092ac93d5988e2444",
            "owner_id": "898739220656",
            "tags": {
              "Name": "apache-gw"
            },
            "tags_all": {
              "Name": "apache-gw"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "apache-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:loadbalancer/app/apache-lb-tf/7c3ccfe14e3dc397",
            "arn_suffix": "app/apache-lb-tf/7c3ccfe14e3dc397",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "apache-lb-tf-1859873054.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:loadbalancer/app/apache-lb-tf/7c3ccfe14e3dc397",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-051f6c90776ea705a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09791e3b9cec28cfe"
              },
              {
                "subnet_id": "subnet-0e8c38166e7a2b739"
              },
              {
                "subnet_id": "subnet-0fb8fd81075fa08ab"
              }
            ],
            "subnets": [
              "subnet-09791e3b9cec28cfe",
              "subnet-0e8c38166e7a2b739",
              "subnet-0fb8fd81075fa08ab"
            ],
            "tags": {
              "Name": "apache-loadbalancer"
            },
            "tags_all": {
              "Name": "apache-loadbalancer"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.loadbalancer-allow-http",
            "aws_subnet.public-subnet-a",
            "aws_subnet.public-subnet-b",
            "aws_subnet.public-subnet-c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:listener/app/apache-lb-tf/7c3ccfe14e3dc397/12e004cdb213fe93",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:targetgroup/apache-targetgroup/f299fab5d88850e0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:listener/app/apache-lb-tf/7c3ccfe14e3dc397/12e004cdb213fe93",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:loadbalancer/app/apache-lb-tf/7c3ccfe14e3dc397",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.apache-loadbalancer",
            "aws_lb_target_group.apache-targetgroup",
            "aws_security_group.loadbalancer-allow-http",
            "aws_subnet.public-subnet-a",
            "aws_subnet.public-subnet-b",
            "aws_subnet.public-subnet-c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:targetgroup/apache-targetgroup/f299fab5d88850e0",
            "arn_suffix": "targetgroup/apache-targetgroup/f299fab5d88850e0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:898739220656:targetgroup/apache-targetgroup/f299fab5d88850e0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "apache-targetgroup"
            },
            "tags_all": {
              "name": "apache-targetgroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eda3d0a775c16e88",
            "association_id": "eipassoc-07e5e06047a8d9ea0",
            "connectivity_type": "public",
            "id": "nat-0d6a04ba934503c4b",
            "network_interface_id": "eni-0ba3748e310b05570",
            "private_ip": "10.0.14.244",
            "public_ip": "54.228.42.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8c38166e7a2b739",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:route-table/rtb-082c81c1a5c67dd8b",
            "id": "rtb-082c81c1a5c67dd8b",
            "owner_id": "898739220656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d6a04ba934503c4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route-table-1"
            },
            "tags_all": {
              "Name": "Private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:route-table/rtb-081586bd690473e3c",
            "id": "rtb-081586bd690473e3c",
            "owner_id": "898739220656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d6a04ba934503c4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route-table-2"
            },
            "tags_all": {
              "Name": "Private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:route-table/rtb-0fc5c143123560d98",
            "id": "rtb-0fc5c143123560d98",
            "owner_id": "898739220656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d6a04ba934503c4b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route-table-3"
            },
            "tags_all": {
              "Name": "Private-route-table-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:route-table/rtb-0343f16a10db3dbe9",
            "id": "rtb-0343f16a10db3dbe9",
            "owner_id": "898739220656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092ac93d5988e2444",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route-table"
            },
            "tags_all": {
              "Name": "Public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ce62a7196d911f6",
            "route_table_id": "rtb-082c81c1a5c67dd8b",
            "subnet_id": "subnet-04630560c3c0c44e2"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table-1",
            "aws_subnet.private-subnet-a",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeadfbf637c92aff",
            "route_table_id": "rtb-081586bd690473e3c",
            "subnet_id": "subnet-0629277f83e5912ff"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table-2",
            "aws_subnet.private-subnet-b",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084ee15c68f07e2ac",
            "route_table_id": "rtb-0fc5c143123560d98",
            "subnet_id": "subnet-0f6d4347c255c37dd"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table-3",
            "aws_subnet.private-subnet-c",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f899a521240178f3",
            "route_table_id": "rtb-0343f16a10db3dbe9",
            "subnet_id": "subnet-0e8c38166e7a2b739"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet-a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05168afc9907f2730",
            "route_table_id": "rtb-0343f16a10db3dbe9",
            "subnet_id": "subnet-09791e3b9cec28cfe"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet-b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba0972a5e084e81f",
            "route_table_id": "rtb-0343f16a10db3dbe9",
            "subnet_id": "subnet-0fb8fd81075fa08ab"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet-c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:security-group/sg-0bb725e55e2f4a2e1",
            "description": "Allow http inbound traffic from loadbalancer ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb725e55e2f4a2e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051f6c90776ea705a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http-lb",
            "name_prefix": "",
            "owner_id": "898739220656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lauchtemplate-allow_loadbalancer"
            },
            "tags_all": {
              "Name": "lauchtemplate-allow_loadbalancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.loadbalancer-allow-http",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:security-group/sg-051f6c90776ea705a",
            "description": "Allow http inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051f6c90776ea705a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": "",
            "owner_id": "898739220656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer-allow_http"
            },
            "tags_all": {
              "Name": "loadbalancer-allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:subnet/subnet-04630560c3c0c44e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04630560c3c0c44e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898739220656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-private-subnet-a"
            },
            "tags_all": {
              "Name": "apache-private-subnet-a"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:subnet/subnet-0629277f83e5912ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0629277f83e5912ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898739220656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-private-subnet-b"
            },
            "tags_all": {
              "Name": "apache-private-subnet-b"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:subnet/subnet-0f6d4347c255c37dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6d4347c255c37dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898739220656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-private-subnet-c"
            },
            "tags_all": {
              "Name": "apache-private-subnet-c"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:subnet/subnet-0e8c38166e7a2b739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8c38166e7a2b739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898739220656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-public-subnet-a"
            },
            "tags_all": {
              "Name": "apache-public-subnet-a"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:subnet/subnet-09791e3b9cec28cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09791e3b9cec28cfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898739220656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-public-subnet-b"
            },
            "tags_all": {
              "Name": "apache-public-subnet-b"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:subnet/subnet-0fb8fd81075fa08ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb8fd81075fa08ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898739220656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apache-public-subnet-c"
            },
            "tags_all": {
              "Name": "apache-public-subnet-c"
            },
            "vpc_id": "vpc-0e905b8d1dd18e65c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898739220656:vpc/vpc-0e905b8d1dd18e65c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0307d219aa353e0cc",
            "default_route_table_id": "rtb-025ab0bd6c63df845",
            "default_security_group_id": "sg-0279d6f550cf73958",
            "dhcp_options_id": "dopt-01c37c3ad209d7ee2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e905b8d1dd18e65c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025ab0bd6c63df845",
            "owner_id": "898739220656",
            "tags": {
              "Name": "apache-vpc"
            },
            "tags_all": {
              "Name": "apache-vpc"
            }
          }
        }
      ]
    }
  ]
}